@@ -1,4 +1,5 @@
 Version 1.0.0
+2013-08-30 Stefan Busemann: Feature #40349 my Files - the list of files should be created using the selected categorys (thanks to Manuel Link)
 2013-08-30 Stefan Busemann: Bug #49491 ((resolved) Deleted documents are found if the search term matches the category
 2013-08-30 Stefan Busemann: Bug #49491 ((resolved) marker wrong?: upload step 3 - thanks to thomas
 2013-08-29 Stefan Busemann: Bug #51214 (resolved) PHP Warning: Creating default object from empty value indam_frontend/pushfile.php line 40 (thanks to Christophe Neria)
